# iron-engine

./: CMakeLists.txt  readme.md
src/: camera.cpp  camera.hpp  component_manager.hpp  entity_factory.cpp  entity_factory.hpp  iron-engine.cpp  iron-engine.hpp  main.cpp  physics_system.cpp  physics_system.hpp  shader.hpp  window.cpp  window.hpp
src/engine/: api.cpp  camera.cpp  camera.hpp  component_manager.hpp  entity.hpp  errors.hpp  event_manager.hpp  iron-engine.cpp  iron-engine.hpp  light.hpp  physics_system.cpp  physics_system.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  transform.hpp  window.cpp  window.hpp
src/engine/mesh/: EBO.cpp  EBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  mesh.cpp  mesh.hpp  mesh_manager.cpp  mesh_manager.hpp  primitive_meshes.cpp  primitive_meshes.hpp
src/engine/shaders/: collider.frag  default.frag  default.vert
src/mesh/: EBO.cpp  EBO.hpp  VBO.cpp  VBO.hpp  mesh.hpp  mesh_manager.hpp  primitive_meshes.cpp  primitive_meshes.hpp
